--- a/mock.html
+++ b/mock.html
@@ -9,7 +9,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <title>WpF Degree : Course Archive</title>
+     <title>Placement and Grooming Portal : Mock Papers</title>
 
     <!-- Mobile Specific Metas
     ================================================== -->
@@ -50,7 +50,11 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/jquery.min.js"></script>
+
+
+      <![endif]-->
   </head>
   <body>
 
@@ -82,7 +86,7 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
               <li><a href="index.html">Home</a></li>
-              <li class="active"><a href="course-archive.html">Course</a></li>
+              <li class="active"><a href="#">Mock</a></li>
               <li><a href="scholarship.html">Scholarship</a></li>
               <li><a href="events-archive.html">Events</a></li>
               <li><a href="gallery.html">Gallery</a></li>                
@@ -103,234 +107,29 @@
       </div>
       <!-- END MENU -->    
     </header>
+<br> <br> <br> <br> <br> <br> <br>
+        <div class="row">
+            <div class="col-lg-12 col-md-12">
+                <button class="btn btn-primary" id="cat" >Cat Papers</button>
+                <button class="btn btn-primary" id="gate" >Gate Papers</button>
+                <button class="btn btn-primary" id="xat" >Xat Papers</button>
+                <br> <br>
+                <div id="f">
+        </div>
+
+            </div>
+
+    </div>
     <!--=========== END HEADER SECTION ================--> 
 
     <!--=========== BEGIN COURSE BANNER SECTION ================-->
-    <section id="imgBanner">
-      <h2>Course Archive</h2>
-    </section>
-    <!--=========== END COURSE BANNER SECTION ================-->
-    
-    <!--=========== BEGIN COURSE BANNER SECTION ================-->
-    <section id="courseArchive">
-      <div class="container">
-        <div class="row">
-          <!-- start course content -->
-          <div class="col-lg-8 col-md-8 col-sm-8">
-            <div class="courseArchive_content">
-              <div class="row">
-                <!-- start single course -->
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                  <div class="single_course wow fadeInUp">
-                    <div class="singCourse_imgarea">
-                      <img src="img/course-1.jpg" />
-                      <div class="mask">                         
-                        <a href="course-single.html" class="course_more">View Course</a>
-                      </div>
-                    </div>
-                    <div class="singCourse_content">
-                    <h3 class="singCourse_title"><a href="course-single.html">Introduction To Matrix</a></h3>
-                    <p class="singCourse_price"><span>$20</span> Per One Month</p>
-                    <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
-                    </div>
-                    <div class="singCourse_author">
-                      <img src="img/author.jpg" alt="img">
-                      <p>Richard Remus, Teacher</p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End single course -->
-                <!-- start single course -->
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                  <div class="single_course wow fadeInUp">
-                    <div class="singCourse_imgarea">
-                      <img src="img/course-1.jpg" />
-                      <div class="mask">                         
-                        <a href="course-single.html" class="course_more">View Course</a>
-                      </div>
-                    </div>
-                    <div class="singCourse_content">
-                    <h3 class="singCourse_title"><a href="course-single.html">Introduction To Matrix</a></h3>
-                    <p class="singCourse_price"><span>$20</span> Per One Month</p>
-                    <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
-                    </div>
-                    <div class="singCourse_author">
-                      <img src="img/author.jpg" alt="img">
-                      <p>Richard Remus, Teacher</p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End single course -->
-                <!-- start single course -->
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                  <div class="single_course wow fadeInUp">
-                    <div class="singCourse_imgarea">
-                      <img src="img/course-1.jpg" />
-                      <div class="mask">                         
-                        <a href="course-single.html" class="course_more">View Course</a>
-                      </div>
-                    </div>
-                    <div class="singCourse_content">
-                    <h3 class="singCourse_title"><a href="course-single.html">Introduction To Matrix</a></h3>
-                    <p class="singCourse_price"><span>$20</span> Per One Month</p>
-                    <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
-                    </div>
-                    <div class="singCourse_author">
-                      <img src="img/author.jpg" alt="img">
-                      <p>Richard Remus, Teacher</p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End single course -->
-                <!-- start single course -->
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                  <div class="single_course wow fadeInUp">
-                    <div class="singCourse_imgarea">
-                      <img src="img/course-1.jpg" />
-                      <div class="mask">                         
-                        <a href="course-single.html" class="course_more">View Course</a>
-                      </div>
-                    </div>
-                    <div class="singCourse_content">
-                    <h3 class="singCourse_title"><a href="course-single.html">Introduction To Matrix</a></h3>
-                    <p class="singCourse_price"><span>$20</span> Per One Month</p>
-                    <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
-                    </div>
-                    <div class="singCourse_author">
-                      <img src="img/author.jpg" alt="img">
-                      <p>Richard Remus, Teacher</p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End single course -->
-                <!-- start single course -->
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                  <div class="single_course wow fadeInUp">
-                    <div class="singCourse_imgarea">
-                      <img src="img/course-1.jpg" />
-                      <div class="mask">                         
-                        <a href="course-single.html" class="course_more">View Course</a>
-                      </div>
-                    </div>
-                    <div class="singCourse_content">
-                    <h3 class="singCourse_title"><a href="course-single.html">Introduction To Matrix</a></h3>
-                    <p class="singCourse_price"><span>$20</span> Per One Month</p>
-                    <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
-                    </div>
-                    <div class="singCourse_author">
-                      <img src="img/author.jpg" alt="img">
-                      <p>Richard Remus, Teacher</p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End single course -->
-                <!-- start single course -->
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                  <div class="single_course wow fadeInUp">
-                    <div class="singCourse_imgarea">
-                      <img src="img/course-1.jpg" />
-                      <div class="mask">                         
-                        <a href="course-single.html" class="course_more">View Course</a>
-                      </div>
-                    </div>
-                    <div class="singCourse_content">
-                    <h3 class="singCourse_title"><a href="course-single.html">Introduction To Matrix</a></h3>
-                    <p class="singCourse_price"><span>$20</span> Per One Month</p>
-                    <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
-                    </div>
-                    <div class="singCourse_author">
-                      <img src="img/author.jpg" alt="img">
-                      <p>Richard Remus, Teacher</p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End single course -->
-              </div>
-              <!-- start previous & next button -->
-              <div class="single_blog_prevnext">
-                <a href="#" class="prev_post wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft;"><i class="fa fa-angle-left"></i>Previous</a>
-                <a href="#" class="next_post wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight;">Next<i class="fa fa-angle-right"></i></a>
-              </div>
-            </div>
-          </div>
-          <!-- End course content -->
 
-          <!-- start course archive sidebar -->
-          <div class="col-lg-4 col-md-4 col-sm-4">
-            <div class="courseArchive_sidebar">
-              <!-- start single sidebar -->
-              <div class="single_sidebar">
-                <h2>Events <span class="fa fa-angle-double-right"></span></h2>
-                <ul class="news_tab">
-                  <li>
-                    <div class="media">
-                      <div class="media-left">
-                        <a href="#" class="news_img">
-                          <img alt="img" src="img/news.jpg" class="media-object">
-                        </a>
-                      </div>
-                      <div class="media-body">
-                       <a href="#">Dummy text of the printing and typesetting industry</a>
-                       <span class="feed_date">27.02.15</span>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="media">
-                      <div class="media-left">
-                        <a href="#" class="news_img">
-                          <img alt="img" src="img/news.jpg" class="media-object">
-                        </a>
-                      </div>
-                      <div class="media-body">
-                       <a href="#">Dummy text of the printing and typesetting industry</a>
-                       <span class="feed_date">28.02.15</span>                
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="media">
-                      <div class="media-left">
-                        <a href="#" class="news_img">
-                          <img alt="img" src="img/news.jpg" class="media-object">
-                        </a>
-                      </div>
-                      <div class="media-body">
-                       <a href="#">Dummy text of the printing and typesetting industry</a>
-                       <span class="feed_date">28.02.15</span>                
-                      </div>
-                    </div>
-                  </li>                  
-                </ul>
-              </div>
-              <!-- End single sidebar -->
-              <!-- start single sidebar -->
-              <div class="single_sidebar">
-                <h2>Quick Links <span class="fa fa-angle-double-right"></span></h2>
-                <ul>
-                  <li><a href="#">Link 1</a></li>
-                  <li><a href="#">Link 2</a></li>
-                  <li><a href="#">Link 3</a></li>
-                  <li><a href="#">Link 4</a></li>
-                  <li><a href="#">Link 5</a></li>
-                </ul>
-              </div>
-              <!-- End single sidebar -->
-              <!-- start single sidebar -->
-              <div class="single_sidebar">
-                <h2>Sponsor Add <span class="fa fa-angle-double-right"></span></h2>
-                <a class="side_add" href="#"><img src="img/side-add.jpg" alt="img"></a>
-              </div>
-              <!-- End single sidebar -->
-            </div>
-          </div>
-          <!-- start course archive sidebar -->
-        </div>
-      </div>
-    </section>
     <!--=========== END COURSE BANNER SECTION ================-->
-    
+
     <!--=========== BEGIN FOOTER SECTION ================-->
+
+  <br> <br> <br> <br>
+
     <footer id="footer">
       <!-- Start footer top area -->
       <div class="footer_top">
@@ -411,6 +210,132 @@
 
     <!-- initialize jQuery Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript">
+
+
+
+        $("#cat").on('click',function() {
+            var data = {
+                '0': '-- Select Option --',
+                '1': 'Mock 1',
+                '2': 'Mock 2',
+                '3': 'Mock 3',
+                '4': 'Mock4',
+                '5': 'Mock5'
+            }
+
+            var s = $('<select id="c" />');
+
+            for (var val in data) {
+                $('<option />', {value: val, text: data[val]}).appendTo(s);
+            }
+
+            s.appendTo('#f'); // or wherever it should be
+
+            $("#c").on('change', function () {
+                var m = $("#c option:selected").text();
+
+                if (m == "Mock 1") {
+                    var url = "http://www.careerlauncher.com/sis/mba/mock_2_question.pdf";
+                    $(location).attr('href', url);
+                }
+                else if (m == "Mock 2") {
+                    var url = "http://www.careerlauncher.com/sis/mba/mock_3_question.pdf";
+                    $(location).attr('href', url);
+                }
+                else if (m == "Mock 3") {
+                    var url = "http://www.careerlauncher.com/sis/mba/mock_4_question.pdf";
+                    $(location).attr('href', url);
+                }
+                else if (m == "Mock4") {
+                    var url = "http://www.careerlauncher.com/sis/mba/mock_5_question.pdf";
+                    $(location).attr('href', url);
+                }
+            });
+        });
+        $('#gate').on('click',function()
+        {
+            var data = {
+                '0': '-- Select Option --',
+                '1': 'Mock 1',
+                '2': 'Mock 2',
+                '3': 'Mock 3',
+                '4': 'Mock4',
+                '5': 'Mock5'
+            }
+
+            var s = $('<select id="d" />');
+
+            for (var val in data) {
+                $('<option />', {value: val, text: data[val]}).appendTo(s);
+            }
+
+            s.appendTo('#f'); // or wherever it should be
+
+            $("#d").on('change', function () {
+                var m = $("#d option:selected").text();
+
+                if (m == "Mock 1") {
+                    var url = "http://geeksquiz.com/gate-cs-2015/"
+                    $(location).attr('href', url);
+                }
+                else if (m == "Mock 2") {
+                    var url = "http://geeksquiz.com/gate-cs-2014-set-1/";
+                    $(location).attr('href', url);
+                }
+                else if (m == "Mock 3") {
+                    var url = "http://geeksquiz.com/gate-quiz/gate-cs-2013/";
+                    $(location).attr('href', url);
+                }
+                else if (m == "Mock4") {
+                    var url = "http://geeksquiz.com/gate-quiz/gate-cs-2010/";
+                    $(location).attr('href', url);
+                }
+            });
+        });
+        $('#xat').on('click',function()
+        {
+            var data = {
+                '0': '-- Select Option --',
+                '1': 'Mock 1',
+                '2': 'Mock 2',
+                '3': 'Mock 3',
+                '4': 'Mock4',
+                '5': 'Mock5'
+            }
+
+            var s = $('<select id="e" />');
+
+            for (var val in data) {
+                $('<option />', {value: val, text: data[val]}).appendTo(s);
+            }
+
+            s.appendTo('#f'); // or wherever it should be
+
+            $("#e").on('change', function () {
+                var m = $("#e option:selected").text();
+
+                if (m == "Mock 1") {
+                    var url = "http://admission.aglasem.com/xat-2015-question-paper-solutions/"
+                    $(location).attr('href', url);
+                }
+                else if (m == "Mock 2") {
+                    var url = "http://mba.hitbullseye.com/XAT-2014-Analysis-Answerkey.php";
+                    $(location).attr('href', url);
+                }
+                else if (m == "Mock 3") {
+                    var url = "http://admission.aglasem.com/xat-2013-question-paper-with-solutions/";
+                    $(location).attr('href', url);
+                }
+                else if (m == "Mock4") {
+                    var url = "http://admission.aglasem.com/xat-2012-question-paper-with-solutions/";
+                    $(location).attr('href', url);
+                }
+            });
+        });
+
+
+    </script>
     <!-- Preloader js file -->
     <script src="js/queryloader2.min.js" type="text/javascript"></script>
     <!-- For smooth animatin  -->
