--- a/mock.html
+++ b/mock.html
@@ -78,7 +78,7 @@
             </button>
             <!-- LOGO -->
             <!-- TEXT BASED LOGO -->
-            <a class="navbar-brand" href="index.html">WpF <span>Degree</span></a>            
+            <a class="navbar-brand" href="index.html">Placement <span> and Grooming Portal</span></a>
             <!-- IMG BASED LOGO  -->
              <!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a>  -->           
                    
